Only CA certs should be CA:true
Signed-off-by: Tom Bentley <tbentley@redhat.com>